--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "daisyui": "^1.16.1",
+    "jssha": "^3.2.0",
     "sass": "^1.43.4",
     "vue": "^3.2.20",
+    "vue-axios": "^3.4.0",
     "vue-i18n": "^9.2.0-beta.17",
     "vue-router": "^4.0.12"
   },
