--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "axios": "^0.24.0",
     "daisyui": "^1.16.1",
+    "element-plus": "^1.2.0-beta.3",
     "jssha": "^3.2.0",
     "sass": "^1.43.4",
+    "unplugin-vue-components": "^0.17.2",
     "vue": "^3.2.20",
     "vue-axios": "^3.4.0",
+    "vue-final-modal": "^3.4.3",
     "vue-i18n": "^9.2.0-beta.17",
     "vue-router": "^4.0.12"
   },
