--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_APP_BASE_API = 'http://vitetest.com'
+VITE_APP_AppID=2d59acd2cea44ff7b241a386c39ab6f7
+VITE_APP_AppKey=yMrGHJnuiwFHwqspCCBUVqyjCD0
