--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,6 @@ dist-ssr
 debug.log
 .idea
 
-# local env files
-.env
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor directories and files
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.env.local
+.env.*.local
